tetrate/tis1201/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-workload-serviceentry-mapping-chainsaw
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: apply-check-workload-serviceentry-mapping-policy
      try:
        - apply:
            file: ../check-workload-serviceentry-mapping.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-serviceentry
      try:
        - apply:
            file: serviceentry.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml


    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
